--- a/src/features/home/Home.css
+++ b/src/features/home/Home.css
@@ -1,7 +1,4 @@
-.border-right {
-    border-right: 1px solid #ccc;
-  }
-  
+
   .wrapper {
     height: auto;
     margin-top: 1%;
